# Fanuc_RMI

./: .gitignore  README.md  config.toml  configuration_visualization.py  main.py  pyproject.toml  requirements.txt  robot_position_cartesian.jsonl  robot_position_joint.jsonl  robot_position_joint.txt  test.py
fanuc_rmi/: __init__.py  client.py  config.py  connection.py  helpers.py  kinematics.py  motions.py  pose_reader.py
robot_models/crx10ial/: crx10ial.urdf
