[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fanuc-rmi"
version = "0.1.0"
description = "Simple FANUC RMI client"
requires-python = ">=3.11"

[project.scripts]
fanuc-rmi = "main:main"

[tool.setuptools]
packages = ["fanuc_rmi"]
py-modules = ["main"]
